InterpreteR/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    Inf
    NaN
    NA

Grammar

Rule 0     S' -> prog
Rule 1     prog -> exprlist
Rule 2     emptyline -> NLINE
Rule 3     emptyline -> emptyline NLINE
Rule 4     exprlist -> empty
Rule 5     exprlist -> expr_or_assign
Rule 6     exprlist -> exprlist ;
Rule 7     exprlist -> exprlist emptyline
Rule 8     exprlist -> exprlist ; expr_or_assign
Rule 9     exprlist -> exprlist emptyline expr_or_assign
Rule 10    expr_or_assign -> expr
Rule 11    expr_or_assign -> SYMBOL EQ_ASSIGN expr_or_assign
Rule 12    expr_or_assign_nl -> expr_or_assign
Rule 13    expr_or_assign_nl -> emptyline expr_or_assign
Rule 14    expr -> const_or_symbol
Rule 15    expr -> binary_operation
Rule 16    expr -> unary_operation
Rule 17    expr -> statement_declaration
Rule 18    expr -> expr RIGHT_ASSIGN SYMBOL
Rule 19    expr -> SYMBOL LEFT_ASSIGN expr
Rule 20    expr -> ( expr_or_assign )
Rule 21    expr -> expr [ sublist ]
Rule 22    expr -> expr LBB sublist ] ]
Rule 23    expr -> { exprlist }
Rule 24    expr -> FUNCTION ( formlist ) expr_or_assign_nl
Rule 25    expr -> SYMBOL ( sublist )
Rule 26    formlist -> SYMBOL
Rule 27    formlist -> SYMBOL EQ_ASSIGN expr
Rule 28    formlist -> formlist , SYMBOL
Rule 29    formlist -> formlist , SYMBOL EQ_ASSIGN expr
Rule 30    formlist -> empty
Rule 31    sublist -> sub
Rule 32    sublist -> sublist , sub
Rule 33    sub -> empty
Rule 34    sub -> expr
Rule 35    const_or_symbol -> SYMBOL
Rule 36    const_or_symbol -> STR_CONST
Rule 37    const_or_symbol -> REAL
Rule 38    const_or_symbol -> INT
Rule 39    const_or_symbol -> NULL_CONST
Rule 40    const_or_symbol -> TRUE
Rule 41    const_or_symbol -> FALSE
Rule 42    binary_operation -> expr + expr
Rule 43    binary_operation -> expr - expr
Rule 44    binary_operation -> expr * expr
Rule 45    binary_operation -> expr POWER expr
Rule 46    binary_operation -> expr MOD expr
Rule 47    binary_operation -> expr INT_DIV expr
Rule 48    binary_operation -> expr / expr
Rule 49    binary_operation -> expr : expr
Rule 50    binary_operation -> expr ~ expr
Rule 51    binary_operation -> expr ? expr
Rule 52    binary_operation -> expr LT expr
Rule 53    binary_operation -> expr LE expr
Rule 54    binary_operation -> expr EQ expr
Rule 55    binary_operation -> expr NE expr
Rule 56    binary_operation -> expr GE expr
Rule 57    binary_operation -> expr GT expr
Rule 58    binary_operation -> expr AND expr
Rule 59    binary_operation -> expr OR expr
Rule 60    binary_operation -> expr AND2 expr
Rule 61    binary_operation -> expr OR2 expr
Rule 62    binary_operation -> expr MATRIX_MULT expr
Rule 63    binary_operation -> expr $ SYMBOL
Rule 64    binary_operation -> expr $ STR_CONST
Rule 65    binary_operation -> expr @ SYMBOL
Rule 66    binary_operation -> expr @ STR_CONST
Rule 67    unary_operation -> - expr
Rule 68    unary_operation -> + expr
Rule 69    unary_operation -> ! expr
Rule 70    unary_operation -> ~ expr
Rule 71    unary_operation -> ? expr
Rule 72    statement_declaration -> if_statement
Rule 73    statement_declaration -> for_statement
Rule 74    statement_declaration -> while_statement
Rule 75    if_statement -> IF ( expr ) expr_or_assign_nl else_statement
Rule 76    else_statement -> empty
Rule 77    else_statement -> ELSE expr_or_assign_nl
Rule 78    else_statement -> NLINE else_statement
Rule 79    for_statement -> FOR ( SYMBOL IN expr ) expr_or_assign_nl
Rule 80    while_statement -> WHILE ( expr ) expr_or_assign_nl
Rule 81    empty -> <empty>

Terminals, with rules where they appear

!                    : 69
$                    : 63 64
(                    : 20 24 25 75 79 80
)                    : 20 24 25 75 79 80
*                    : 44
+                    : 42 68
,                    : 28 29 32
-                    : 43 67
/                    : 48
:                    : 49
;                    : 6 8
?                    : 51 71
@                    : 65 66
AND                  : 58
AND2                 : 60
COMMENT              : 
ELSE                 : 77
EQ                   : 54
EQ_ASSIGN            : 11 27 29
FALSE                : 41
FOR                  : 79
FUNCTION             : 24
GE                   : 56
GT                   : 57
IF                   : 75
IN                   : 79
INT                  : 38
INT_DIV              : 47
Inf                  : 
LBB                  : 22
LE                   : 53
LEFT_ASSIGN          : 19
LT                   : 52
MATRIX_MULT          : 62
MOD                  : 46
NA                   : 
NE                   : 55
NLINE                : 2 3 78
NULL_CONST           : 39
NaN                  : 
OR                   : 59
OR2                  : 61
POWER                : 45
REAL                 : 37
RIGHT_ASSIGN         : 18
STR_CONST            : 36 64 66
SYMBOL               : 11 18 19 25 26 27 28 29 35 63 65 79
TRUE                 : 40
WHILE                : 80
[                    : 21
]                    : 21 22 22
error                : 
{                    : 23
}                    : 23
~                    : 50 70

Nonterminals, with rules where they appear

binary_operation     : 15
const_or_symbol      : 14
else_statement       : 75 78
empty                : 4 30 33 76
emptyline            : 3 7 9 13
expr                 : 10 18 19 21 22 27 29 34 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 64 65 66 67 68 69 70 71 75 79 80
expr_or_assign       : 5 8 9 11 12 13 20
expr_or_assign_nl    : 24 75 77 79 80
exprlist             : 1 6 7 8 9 23
for_statement        : 73
formlist             : 24 28 29
if_statement         : 72
prog                 : 0
statement_declaration : 17
sub                  : 31 32
sublist              : 21 22 25 32
unary_operation      : 16
while_statement      : 74

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . exprlist
    (4) exprlist -> . empty
    (5) exprlist -> . expr_or_assign
    (6) exprlist -> . exprlist ;
    (7) exprlist -> . exprlist emptyline
    (8) exprlist -> . exprlist ; expr_or_assign
    (9) exprlist -> . exprlist emptyline expr_or_assign
    (81) empty -> .
    (10) expr_or_assign -> . expr
    (11) expr_or_assign -> . SYMBOL EQ_ASSIGN expr_or_assign
    (14) expr -> . const_or_symbol
    (15) expr -> . binary_operation
    (16) expr -> . unary_operation
    (17) expr -> . statement_declaration
    (18) expr -> . expr RIGHT_ASSIGN SYMBOL
    (19) expr -> . SYMBOL LEFT_ASSIGN expr
    (20) expr -> . ( expr_or_assign )
    (21) expr -> . expr [ sublist ]
    (22) expr -> . expr LBB sublist ] ]
    (23) expr -> . { exprlist }
    (24) expr -> . FUNCTION ( formlist ) expr_or_assign_nl
    (25) expr -> . SYMBOL ( sublist )
    (35) const_or_symbol -> . SYMBOL
    (36) const_or_symbol -> . STR_CONST
    (37) const_or_symbol -> . REAL
    (38) const_or_symbol -> . INT
    (39) const_or_symbol -> . NULL_CONST
    (40) const_or_symbol -> . TRUE
    (41) const_or_symbol -> . FALSE
    (42) binary_operation -> . expr + expr
    (43) binary_operation -> . expr - expr
    (44) binary_operation -> . expr * expr
    (45) binary_operation -> . expr POWER expr
    (46) binary_operation -> . expr MOD expr
    (47) binary_operation -> . expr INT_DIV expr
    (48) binary_operation -> . expr / expr
    (49) binary_operation -> . expr : expr
    (50) binary_operation -> . expr ~ expr
    (51) binary_operation -> . expr ? expr
    (52) binary_operation -> . expr LT expr
    (53) binary_operation -> . expr LE expr
    (54) binary_operation -> . expr EQ expr
    (55) binary_operation -> . expr NE expr
    (56) binary_operation -> . expr GE expr
    (57) binary_operation -> . expr GT expr
    (58) binary_operation -> . expr AND expr
    (59) binary_operation -> . expr OR expr
    (60) binary_operation -> . expr AND2 expr
    (61) binary_operation -> . expr OR2 expr
    (62) binary_operation -> . expr MATRIX_MULT expr
    (63) binary_operation -> . expr $ SYMBOL
    (64) binary_operation -> . expr $ STR_CONST
    (65) binary_operation -> . expr @ SYMBOL
    (66) binary_operation -> . expr @ STR_CONST
    (67) unary_operation -> . - expr
    (68) unary_operation -> . + expr
    (69) unary_operation -> . ! expr
    (70) unary_operation -> . ~ expr
    (71) unary_operation -> . ? expr
    (72) statement_declaration -> . if_statement
    (73) statement_declaration -> . for_statement
    (74) statement_declaration -> . while_statement
    (75) if_statement -> . IF ( expr ) expr_or_assign_nl else_statement
    (79) for_statement -> . FOR ( SYMBOL IN expr ) expr_or_assign_nl
    (80) while_statement -> . WHILE ( expr ) expr_or_assign_nl

    ;               reduce using rule 81 (empty -> .)
    NLINE           reduce using rule 81 (empty -> .)
    $end            reduce using rule 81 (empty -> .)
    SYMBOL          shift and go to state 6
    (               shift and go to state 11
    {               shift and go to state 12
    FUNCTION        shift and go to state 13
    STR_CONST       shift and go to state 14
    REAL            shift and go to state 15
    INT             shift and go to state 16
    NULL_CONST      shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    -               shift and go to state 21
    +               shift and go to state 20
    !               shift and go to state 24
    ~               shift and go to state 22
    ?               shift and go to state 23
    IF              shift and go to state 28
    FOR             shift and go to state 29
    WHILE           shift and go to state 30

    prog                           shift and go to state 1
    exprlist                       shift and go to state 2
    empty                          shift and go to state 3
    expr_or_assign                 shift and go to state 4
    expr                           shift and go to state 5
    const_or_symbol                shift and go to state 7
    binary_operation               shift and go to state 8
    unary_operation                shift and go to state 9
    statement_declaration          shift and go to state 10
    if_statement                   shift and go to state 25
    for_statement                  shift and go to state 26
    while_statement                shift and go to state 27

state 1

    (0) S' -> prog .



state 2

    (1) prog -> exprlist .
    (6) exprlist -> exprlist . ;
    (7) exprlist -> exprlist . emptyline
    (8) exprlist -> exprlist . ; expr_or_assign
    (9) exprlist -> exprlist . emptyline expr_or_assign
    (2) emptyline -> . NLINE
    (3) emptyline -> . emptyline NLINE

    $end            reduce using rule 1 (prog -> exprlist .)
    ;               shift and go to state 31
    NLINE           shift and go to state 33

    emptyline                      shift and go to state 32

state 3

    (4) exprlist -> empty .

    ;               reduce using rule 4 (exprlist -> empty .)
    NLINE           reduce using rule 4 (exprlist -> empty .)
    $end            reduce using rule 4 (exprlist -> empty .)
    }               reduce using rule 4 (exprlist -> empty .)


state 4

    (5) exprlist -> expr_or_assign .

    ;               reduce using rule 5 (exprlist -> expr_or_assign .)
    NLINE           reduce using rule 5 (exprlist -> expr_or_assign .)
    $end            reduce using rule 5 (exprlist -> expr_or_assign .)
    }               reduce using rule 5 (exprlist -> expr_or_assign .)


state 5

    (10) expr_or_assign -> expr .
    (18) expr -> expr . RIGHT_ASSIGN SYMBOL
    (21) expr -> expr . [ sublist ]
    (22) expr -> expr . LBB sublist ] ]
    (42) binary_operation -> expr . + expr
    (43) binary_operation -> expr . - expr
    (44) binary_operation -> expr . * expr
    (45) binary_operation -> expr . POWER expr
    (46) binary_operation -> expr . MOD expr
    (47) binary_operation -> expr . INT_DIV expr
    (48) binary_operation -> expr . / expr
    (49) binary_operation -> expr . : expr
    (50) binary_operation -> expr . ~ expr
    (51) binary_operation -> expr . ? expr
    (52) binary_operation -> expr . LT expr
    (53) binary_operation -> expr . LE expr
    (54) binary_operation -> expr . EQ expr
    (55) binary_operation -> expr . NE expr
    (56) binary_operation -> expr . GE expr
    (57) binary_operation -> expr . GT expr
    (58) binary_operation -> expr . AND expr
    (59) binary_operation -> expr . OR expr
    (60) binary_operation -> expr . AND2 expr
    (61) binary_operation -> expr . OR2 expr
    (62) binary_operation -> expr . MATRIX_MULT expr
    (63) binary_operation -> expr . $ SYMBOL
    (64) binary_operation -> expr . $ STR_CONST
    (65) binary_operation -> expr . @ SYMBOL
    (66) binary_operation -> expr . @ STR_CONST

  ! shift/reduce conflict for RIGHT_ASSIGN resolved as shift
  ! shift/reduce conflict for [ resolved as shift
  ! shift/reduce conflict for LBB resolved as shift
  ! shift/reduce conflict for + resolved as shift
  ! shift/reduce conflict for - resolved as shift
  ! shift/reduce conflict for * resolved as shift
  ! shift/reduce conflict for POWER resolved as shift
  ! shift/reduce conflict for MOD resolved as shift
  ! shift/reduce conflict for INT_DIV resolved as shift
  ! shift/reduce conflict for / resolved as shift
  ! shift/reduce conflict for : resolved as shift
  ! shift/reduce conflict for ~ resolved as shift
  ! shift/reduce conflict for ? resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NE resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AND2 resolved as shift
  ! shift/reduce conflict for OR2 resolved as shift
  ! shift/reduce conflict for MATRIX_MULT resolved as shift
  ! shift/reduce conflict for $ resolved as shift
  ! shift/reduce conflict for @ resolved as shift
    ;               reduce using rule 10 (expr_or_assign -> expr .)
    NLINE           reduce using rule 10 (expr_or_assign -> expr .)
    $end            reduce using rule 10 (expr_or_assign -> expr .)
    )               reduce using rule 10 (expr_or_assign -> expr .)
    }               reduce using rule 10 (expr_or_assign -> expr .)
    ]               reduce using rule 10 (expr_or_assign -> expr .)
    ,               reduce using rule 10 (expr_or_assign -> expr .)
    ELSE            reduce using rule 10 (expr_or_assign -> expr .)
    RIGHT_ASSIGN    shift and go to state 34
    [               shift and go to state 35
    LBB             shift and go to state 36
    +               shift and go to state 37
    -               shift and go to state 38
    *               shift and go to state 39
    POWER           shift and go to state 40
    MOD             shift and go to state 41
    INT_DIV         shift and go to state 42
    /               shift and go to state 43
    :               shift and go to state 44
    ~               shift and go to state 45
    ?               shift and go to state 46
    LT              shift and go to state 47
    LE              shift and go to state 48
    EQ              shift and go to state 49
    NE              shift and go to state 50
    GE              shift and go to state 51
    GT              shift and go to state 52
    AND             shift and go to state 53
    OR              shift and go to state 54
    AND2            shift and go to state 55
    OR2             shift and go to state 56
    MATRIX_MULT     shift and go to state 57
    $               shift and go to state 58
    @               shift and go to state 59

  ! RIGHT_ASSIGN    [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! [               [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! LBB             [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! +               [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! -               [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! *               [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! POWER           [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! MOD             [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! INT_DIV         [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! /               [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! :               [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! ~               [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! ?               [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! LT              [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! LE              [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! EQ              [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! NE              [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! GE              [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! GT              [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! AND             [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! OR              [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! AND2            [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! OR2             [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! MATRIX_MULT     [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! $               [ reduce using rule 10 (expr_or_assign -> expr .) ]
  ! @               [ reduce using rule 10 (expr_or_assign -> expr .) ]


state 6

    (11) expr_or_assign -> SYMBOL . EQ_ASSIGN expr_or_assign
    (19) expr -> SYMBOL . LEFT_ASSIGN expr
    (25) expr -> SYMBOL . ( sublist )
    (35) const_or_symbol -> SYMBOL .

    EQ_ASSIGN       shift and go to state 60
    LEFT_ASSIGN     shift and go to state 61
    (               shift and go to state 62
    RIGHT_ASSIGN    reduce using rule 35 (const_or_symbol -> SYMBOL .)
    [               reduce using rule 35 (const_or_symbol -> SYMBOL .)
    LBB             reduce using rule 35 (const_or_symbol -> SYMBOL .)
    +               reduce using rule 35 (const_or_symbol -> SYMBOL .)
    -               reduce using rule 35 (const_or_symbol -> SYMBOL .)
    *               reduce using rule 35 (const_or_symbol -> SYMBOL .)
    POWER           reduce using rule 35 (const_or_symbol -> SYMBOL .)
    MOD             reduce using rule 35 (const_or_symbol -> SYMBOL .)
    INT_DIV         reduce using rule 35 (const_or_symbol -> SYMBOL .)
    /               reduce using rule 35 (const_or_symbol -> SYMBOL .)
    :               reduce using rule 35 (const_or_symbol -> SYMBOL .)
    ~               reduce using rule 35 (const_or_symbol -> SYMBOL .)
    ?               reduce using rule 35 (const_or_symbol -> SYMBOL .)
    LT              reduce using rule 35 (const_or_symbol -> SYMBOL .)
    LE              reduce using rule 35 (const_or_symbol -> SYMBOL .)
    EQ              reduce using rule 35 (const_or_symbol -> SYMBOL .)
    NE              reduce using rule 35 (const_or_symbol -> SYMBOL .)
    GE              reduce using rule 35 (const_or_symbol -> SYMBOL .)
    GT              reduce using rule 35 (const_or_symbol -> SYMBOL .)
    AND             reduce using rule 35 (const_or_symbol -> SYMBOL .)
    OR              reduce using rule 35 (const_or_symbol -> SYMBOL .)
    AND2            reduce using rule 35 (const_or_symbol -> SYMBOL .)
    OR2             reduce using rule 35 (const_or_symbol -> SYMBOL .)
    MATRIX_MULT     reduce using rule 35 (const_or_symbol -> SYMBOL .)
    $               reduce using rule 35 (const_or_symbol -> SYMBOL .)
    @               reduce using rule 35 (const_or_symbol -> SYMBOL .)
    ;               reduce using rule 35 (const_or_symbol -> SYMBOL .)
    NLINE           reduce using rule 35 (const_or_symbol -> SYMBOL .)
    $end            reduce using rule 35 (const_or_symbol -> SYMBOL .)
    )               reduce using rule 35 (const_or_symbol -> SYMBOL .)
    }               reduce using rule 35 (const_or_symbol -> SYMBOL .)
    ]               reduce using rule 35 (const_or_symbol -> SYMBOL .)
    ,               reduce using rule 35 (const_or_symbol -> SYMBOL .)
    ELSE            reduce using rule 35 (const_or_symbol -> SYMBOL .)


state 7

    (14) expr -> const_or_symbol .

    RIGHT_ASSIGN    reduce using rule 14 (expr -> const_or_symbol .)
    [               reduce using rule 14 (expr -> const_or_symbol .)
    LBB             reduce using rule 14 (expr -> const_or_symbol .)
    +               reduce using rule 14 (expr -> const_or_symbol .)
    -               reduce using rule 14 (expr -> const_or_symbol .)
    *               reduce using rule 14 (expr -> const_or_symbol .)
    POWER           reduce using rule 14 (expr -> const_or_symbol .)
    MOD             reduce using rule 14 (expr -> const_or_symbol .)
    INT_DIV         reduce using rule 14 (expr -> const_or_symbol .)
    /               reduce using rule 14 (expr -> const_or_symbol .)
    :               reduce using rule 14 (expr -> const_or_symbol .)
    ~               reduce using rule 14 (expr -> const_or_symbol .)
    ?               reduce using rule 14 (expr -> const_or_symbol .)
    LT              reduce using rule 14 (expr -> const_or_symbol .)
    LE              reduce using rule 14 (expr -> const_or_symbol .)
    EQ              reduce using rule 14 (expr -> const_or_symbol .)
    NE              reduce using rule 14 (expr -> const_or_symbol .)
    GE              reduce using rule 14 (expr -> const_or_symbol .)
    GT              reduce using rule 14 (expr -> const_or_symbol .)
    AND             reduce using rule 14 (expr -> const_or_symbol .)
    OR              reduce using rule 14 (expr -> const_or_symbol .)
    AND2            reduce using rule 14 (expr -> const_or_symbol .)
    OR2             reduce using rule 14 (expr -> const_or_symbol .)
    MATRIX_MULT     reduce using rule 14 (expr -> const_or_symbol .)
    $               reduce using rule 14 (expr -> const_or_symbol .)
    @               reduce using rule 14 (expr -> const_or_symbol .)
    ;               reduce using rule 14 (expr -> const_or_symbol .)
    NLINE           reduce using rule 14 (expr -> const_or_symbol .)
    $end            reduce using rule 14 (expr -> const_or_symbol .)
